# caolo-backend

./: '  .dockerignore  .gitignore  .gitmodules  Cargo.toml  Cargo.web.toml  Cargo.worker.toml  Makefile  README.md  api.Dockerfile  docker-compose.yaml  dockerfile  dockerfile.release  dockerfile.web  dockerfile.worker  example.env  go.mod  go.sum  heroku.yml  main.go  okteto.yml  profiler_viz.ipynb  release.Dockerfile  release.sh  rt.Dockerfile  sim.Dockerfile  sqlx-data.json  vim.exe.stackdump  web.Dockerfile  worker.Dockerfile  worker.logs
api/: .dockerignore  .gitignore  .pylintrc  Cargo.toml  README.md  build.rs  pyproject.toml  setup.py  start.sh
api/caoloapi/: __init__.py  api_schema.py  app.py  config.py  queen.py  util.py
api/caoloapi/handler/: __init__.py  admin.py  commands.py  scripting.py  users.py  world.py  world_ws.py
api/caoloapi/model/: auth.py  game_state.py
api/src/: lib.rs  messages.rs  pathfinding.rs  point.rs  point3.rs  terrain.rs  user.rs
api/src/bots/: bot.rs  intents.rs  mod.rs
api/src/resources/: minerals.rs  mod.rs
api/src/structures/: mod.rs  spawn_intent.rs
cao-lang/: Cargo.toml  README.md
cao-lang/src/: ast.rs  compiler.rs  instruction.rs  lib.rs  macros.rs  prelude.rs  scalar.rs  trait_impl.rs  traits.rs  value.rs  vm.rs
cao-lang/src/compiler/: astnode.rs  mod.rs  tests.rs
example-bot/: Cargo.toml
example-bot/src/: lib.rs
sim/debug/src-tauri/: Cargo.toml
sim/debug/src-tauri/src/: cmd.rs  main.rs
sim/simulation/: .dockerignore  Cargo.toml  build.rs
sim/simulation/benches/: btree_table.rs  morton_table.rs  pathfinding_benches.rs  simulation_benchmarks.rs  table_join.rs  vec_table.rs
sim/simulation/src/: components.rs  diagnostics.rs  entity_archetypes.rs  executor.rs  indices.rs  init.rs  intents.rs  lib.rs  map_generation.rs  noise.rs  pathfinding.rs  prelude.rs  scripting_api.rs  systems.rs  terrain.rs  utils.rs  world.rs
sim/simulation/src/components/: bot_components.rs  game_config.rs  resources.rs  rooms.rs  script_components.rs
sim/simulation/src/diagnostics/: serde_impl.rs
sim/simulation/src/geometry/: axial.rs  hexagon.rs  mod.rs
sim/simulation/src/intents/: attack_intent.rs  dropoff_intent.rs  log_intent.rs  (+3 more)
sim/worker/: Cargo.toml  build.rs  sqlx-data.json
sim/worker/src/: command_service.rs  config.rs  input.rs  main.rs  output.rs  protos.rs  scripting_service.rs  world_service.rs
simulation/: Cargo.toml
simulation/benches/: btree_table.rs  morton_table.rs  table_join.rs  vec_table.rs
simulation/src/: components.rs  data_store.rs  diagnostics.rs  executor.rs  intents.rs  lib.rs  map_generation.rs  pathfinding.rs  prelude.rs  scripting_api.rs  utils.rs  world.rs
simulation/src/api/: bots.rs  mod.rs  resources.rs  spawns.rs  structures.rs
simulation/src/components/: bot_components.rs  resources.rs
simulation/src/geometry/: mod.rs  point.rs
simulation/src/intents/: attack_intent.rs  dropoff_intent.rs  log_intent.rs  mine_intent.rs  mod.rs  move_intent.rs  pathcache_intent.rs  spawn_intent.rs
simulation/src/map_generation/: overworld.rs  room.rs
simulation/src/model/: bots.rs  components.rs  indices.rs  mod.rs  pathfinding.rs  terrain.rs
simulation/src/scripting_api/: find_api.rs
simulation/src/storage/: homogenoustable.rs  macros.rs  mod.rs  views.rs
simulation/src/systems/: attack_system.rs  decay_system.rs  dropoff_intent_system.rs  energy_system.rs  intent_execution.rs  log_intent_system.rs  log_system.rs  mine_intent_system.rs  mineral_system.rs  mod.rs  move_intent_system.rs  pathfinding.rs  positions_system.rs  script_execution.rs  spawn_system.rs
simulation/src/tables/: btree.rs  dense.rs  flag.rs  inmemory.rs  iterators.rs  mod.rs  morton_hierarchy.rs  traits.rs  unique.rs
simulation/src/world/: json_impl.rs
web/: .dockerignore  Cargo.toml  README.md  build.rs  build.sh  dockerfile  dockerfile.release  go.mod  main.go  package.json  release.sh  requirements.txt  setup.py  start.sh
web/caoloweb/: api_schema.py  app.py
web/caoloweb/handler/: __init__.py  admin.py  commands.py  scripting.py  users.py  world.py  world_ws.py
web/caoloweb/model/: __init__.py  auth.py  game_state.py
web/game_state/: game_state.go
web/lib/: index.js
web/native/: Cargo.toml  build.rs
web/native/src/: lib.rs
web/src/: auth.rs  config.rs  filters.rs  google_auth.rs  main.rs  model.rs  world.rs
web/src/handler/: auth.rs  mod.rs  user.rs
web/src/model/: mod.rs
web/src/world/: mod.rs
webservice/: .dockerignore  Cargo.toml  README.md  app.py  main.py  manage.py  requirements.txt
webservice/caolo_web/: __init__.py  config.py
webservice/caolo_web/handler/: auth.py  script.py
webservice/caolo_web/model/: __init__.py  command.py  program.py  user.py
webservice/caolo_web/service/: __init__.py
webservice/migrations/versions/: 094338a06c4d_.py  2147ce1fa522_.py  595168173847_.py  70f9339d5bd7_.py  7699d992b4d8_.py  773c718a06e4_.py  7a447ff002de_.py  ad3c033a5173_.py  fc6358c6a954_.py
webservice/src/: lib.rs
worker/: .dockerignore  Cargo.toml  Makefile  README.md  build.rs  build.sh  dockerfile  run-debug.sh  sqlx-data.json
worker/cao-storage-derive/: Cargo.toml
worker/cao-storage-derive/src/: lib.rs
worker/debug/: Cargo.toml  package.json
worker/debug/pages/: index.js  mapGen.js  mapNoise.js
worker/debug/src/: main.rs
worker/debug/src-tauri/: tauri.conf.json
worker/simulation/: Cargo.toml
worker/simulation/benches/: btree_table.rs  morton_table.rs  vec_table.rs
worker/simulation/src/: components.rs  diagnostics.rs  executor.rs  indices.rs  init.rs  lib.rs  map_generation.rs  noise.rs  pathfinding.rs  scripting_api.rs  systems.rs  terrain.rs  utils.rs  world.rs
worker/src/: config.rs  init.rs  main.rs  output.rs  payload.rs  script_update.rs
worker/src/input/: mod.rs  rooms.rs  script_update.rs  users.rs
worker/src/output/: mod.rs
worker/src/programs/: center_walking_program.json  mining_program.json
worker/src/protos/: mod.rs
worker/worker/: Cargo.toml  build.rs
worker/worker/src/: init.rs  input.rs  main.rs  output.rs  protos.rs
(+288 files in other folders)
