[package]
name = "caolo-api"
version = "0.1.0"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_derive = "1"
uuid = { version="0.7", features=["serde"] }
cao-lang = { path = "../cao-lang" }
