[tool.poetry]
name = "caoloapi"
version = "0.1.0"
description = ""
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
asyncpg = "^0.22.0"
uvicorn = { extras = ["standard"], version = "^0.13.4" }
pydantic = { extras = ["email"], version = "^1.8.1" }
grpcio-tools = "^1.37.0"
aioredis = "^1.3.1"
python-multipart = "^0.0.5"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-jose = "^3.2.0"
cao-lang = { git = "https://github.com/caolo-game/cao-lang.git" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", 'setuptools>=40', 'grpcio-tools']
build-backend = "poetry.core.masonry.api"
