[package]
name = "caolo-example"
version = "0.1.0"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
caolo-api = { path = "../api" }

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
