[package]
name = "caolo-sim"
version = "0.1.0"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
profile = []
log_tables = []

[dependencies]
caolo-api = { path = "../api" }
cao-lang = { path = "../cao-lang" }

log = "0.4"
rand = "0.7"
chrono = "0.4"
uuid = "0.7"
rayon = "1.1"

