[package]
name = "caolo-web"
version = "0.1.0"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
protoc-rust = "2"

[[bin]]
name = "caolo-web"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["web-dotenv", "with-serde"]
web-dotenv = ["dotenv"]
with-serde = []

[dependencies]
dotenv = { version="0.9", optional=true }
reqwest = { version= "0.10", features = ["json"] }
cao-lang = { git = "https://github.com/caolo-game/cao-lang.git", features=[] }
protobuf = { version="2", features=["with-serde"] }

actix = "0.9"
actix-web = "2"
actix-identity = "0.2"
actix-cors = "0.2"
actix-rt = "1"
actix-web-actors = "2"
oauth2 = { version="2", features=[] }
log = "0.4"
failure = "0.1"
serde = { version = "1" }
serde_derive = "1"
serde_json = "1"
env_logger = "0.7"
redis = "0.15"
r2d2_redis = "0.13.0"
uuid = { version="*", features=["serde"] }
chrono = { version="*", features=["serde"] }
sqlx = { version="0.3", features=["postgres", "chrono", "uuid", "json", "tls"] }
thiserror = "1"
url = "1.7"
rand = "0.7"
base64 = "0.12"
