[package]
name = "caolo-worker"
version = "0.1.0"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2018"

[[bin]]
name = "caolo-worker"
required-features = []

[features]
default = ["dotenv"]
dotenv = ["dep-dotenv"]

[dependencies]
caolo-sim = { git = "https://github.com/caolo-game/cao-sim.git", features=["log_tables"] }
cao-lang = { git = "https://github.com/caolo-game/cao-lang.git" }
cao-math = { git = "https://github.com/caolo-game/cao-math.git" }
caolo-messages = { path= "../messages" }

log = "*"
pretty_env_logger = "0.4"
chrono = { version="0.4", features=["serde"] }
serde_json = "1"
serde = "1"
serde_derive = "1"
redis = "0.15"
rand="*"
sentry = "0.19"
rmp-serde = "0.14"
anyhow = "1"
thiserror = "1"
sqlx = { version="0.3", features=["postgres", "chrono", "uuid", "json", "tls"] }
async-std = { version = "1.4.0", features = [ "attributes" ] }

dep-dotenv = { version="0.14", optional=true, package="dotenv" }
uuid = { version="0.7" }

[dev-dependencies]
env_logger = { version="*", default-features=false }

[profile.release]
codegen-units=1
lto=true
