[package]
name = "caolo-worker"
version = "0.1.0"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2018"

[[bin]]
name = "caolo-worker"
path = "src/main.rs"
required-features = []

[features]
default = ["dotenv"]

[dependencies]
caolo-sim = { path = "../simulation" } # , features=["cao-profile"] }
cao-lang = { git = "https://github.com/caolo-game/cao-lang.git" }
cao-messages = { git = "https://github.com/caolo-game/cao-messages.git" }
redis = { version = "0.18", features = ["aio", "async-std-comp"] }
slog = { version = "2", features = [
    "max_level_trace",
    "release_max_level_info"
] }
slog-async = "*"
slog-term = "*"
slog-envlogger = "*"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
serde = "1"
serde_derive = "1"
rand = "*"
sentry = "0.20"
sentry-slog = "0.20"
anyhow = "1"
thiserror = "1"
sqlx = { version = "0.4.1", features = [
    "json",
    "postgres",
    "chrono",
    "tls",
    "uuid",
    "macros",
    "runtime-async-std-native-tls",
    "offline"
] }
dotenv = { version = "0.14", optional = true  }
uuid = { version = "0.8", features = ["v4"] }
capnp = "0.13"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"

[dev-dependencies]
env_logger = { version = "*", default-features = false }
