[package]
name = "caolo-worker"
version = "0.1.0"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2018"
build = "build.rs"

[[bin]]
name = "caolo-worker"
path = "src/main.rs"
required-features = []

[features]
default = ["dotenv"]

[dependencies]
caolo-sim = { path = "../simulation" } # , features=["cao-profile"] }
cao-lang = { git = "https://github.com/caolo-game/cao-lang.git" }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
serde = "1"
futures = "0.3"
serde_derive = "1"
rand = "*"
sentry = "0.22"
anyhow = "1"
thiserror = "1"
sqlx = { version = "0.5", features = [
    "json",
    "postgres",
    "chrono",
    "tls",
    "uuid",
    "macros",
    "runtime-tokio-native-tls",
    "offline"
] }
dotenv = { version = "0.14", optional = true }
uuid = { version = "0.8", features = ["v4"] }
tokio = { version = "1", features = ["sync"] }
tokio-stream = "*"
tonic = { version = "0.4" }
prost = "0.7"
tracing = { version = "0.1" }
tracing-futures = "*"
tracing-subscriber = { version = "0.2", features = [
    "chrono",
    "env-filter",
    "fmt"
] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"

[dev-dependencies]

[build-dependencies]
tonic-build = { version = "0.4", default-features = false, features = [
    "transport",
    "prost"
] }
