[package]
name = "cao-debug"
version = "0.1.0"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
caolo-sim = { path = "../simulation" } # , features=["cao-profile"] }
svg = "0.9.1"

slog = { version = "2", features = [
    "max_level_trace",
    "release_max_level_info"
] }
slog-async = "*"
slog-term = "*"
slog-envlogger = "*"
