[package]
name = "caolo-worker"
version = "0.1.0"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2018"
build = "build.rs"

[[bin]]
name = "caolo-worker"
path = "src/main.rs"
required-features = []

[features]
default = ["dotenv"]

[dependencies]
caolo-sim = { path = "../simulation" } # , features=["cao-profile"] }
cao-lang = { git = "https://github.com/caolo-game/cao-lang.git" }
redis = { version = "0.18", features = ["aio", "async-std-comp"] }
slog = { version = "2", features = [
    "max_level_trace",
    "release_max_level_info"
] }
slog-async = "*"
slog-term = "*"
slog-envlogger = "*"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
serde = "1"
futures = "*"
serde_derive = "1"
rand = "*"
sentry = "0.22"
sentry-slog = "0.22"
anyhow = "1"
thiserror = "1"
sqlx = { version = "0.4.1", features = [
    "json",
    "postgres",
    "chrono",
    "tls",
    "uuid",
    "macros",
    "runtime-async-std-native-tls",
    "offline"
] }
dotenv = { version = "0.14", optional = true }
uuid = { version = "0.8", features = ["v4"] }
protobuf = { version = "2" }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"

[dev-dependencies]
env_logger = { version = "*", default-features = false }

[build-dependencies]
protoc-rust = "2"
