[package]
name = "caolo-sim-debug"
version = "0.1.0"
description = "A Tauri App"
authors = [ ]
license = ""
repository = ""
default-run = "caolo-sim-debug"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.11", features = [ "all-api" ] }
caolo-sim = { path = "../../simulation" }
svg = "0.9.1"
slog = { version = "2", features = [ "max_level_trace", "release_max_level_info" ] }
slog-async = "*"
slog-term = "*"
slog-envlogger = "*"

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "caolo-sim-debug"
path = "src/main.rs"
